# pelican

./: .copier-answers.yaml  .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.dist.yaml  docker-compose.yaml  flake.nix  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: registry.yaml  test.yaml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
docs/: docusaurus.config.mts
docs/docs/: 01-Index.md  02-Usage.md  03-Configuration.md
prisma/: schema.prisma
prisma/migrations/20240713165122_initial/: migration.sql
prisma/migrations/20240714165920_initial/: migration.sql
prisma/migrations/20240718152856_initial/: migration.sql
prisma/migrations/20240719182345_initial/: migration.sql
prisma/migrations/20250706205306_initial/: migration.sql
prisma/migrations/20250707210406_initial/: migration.sql
src/emitunes/: __main__.py  server.py  state.py
src/emitunes/api/: app.py  validator.py
src/emitunes/api/routes/: router.py
src/emitunes/api/routes/bindings/: controller.py  errors.py  models.py  router.py  service.py
src/emitunes/api/routes/media/: controller.py  errors.py  models.py  router.py  service.py
src/emitunes/api/routes/ping/: controller.py  models.py  router.py  service.py
src/emitunes/api/routes/playlists/: controller.py  errors.py  models.py  router.py  service.py
src/emitunes/api/routes/sse/: controller.py  models.py  router.py  service.py
src/emitunes/bindings/: errors.py  models.py  service.py
src/emitunes/config/: base.py  builder.py  models.py
src/emitunes/datatunes/: __init__.py  errors.py  migrator.py  service.py
src/emitunes/media/: errors.py  models.py  service.py
src/emitunes/mediatunes/: errors.py  models.py  service.py
src/emitunes/models/: data.py  events.py
src/emitunes/models/events/: binding.py  event.py  media.py  playlist.py  types.py
src/emitunes/playlists/: errors.py  models.py  service.py
src/emitunes/services/bindings/: errors.py  models.py  service.py
src/emitunes/services/datatunes/: __init__.py  migrator.py  service.py
src/emitunes/services/events/: models.py  service.py
src/emitunes/services/media/: errors.py  models.py  service.py
src/emitunes/services/mediatunes/: errors.py  models.py  service.py
src/emitunes/services/ping/: models.py  service.py
src/emitunes/services/playlists/: errors.py  models.py  service.py
src/emitunes/utils/: asyncify.py  syncify.py
src/pelican/: __main__.py  server.py  state.py
src/pelican/api/: app.py  lifespans.py  openapi.py  validator.py
src/pelican/api/routes/: router.py
src/pelican/api/routes/bindings/: controller.py  errors.py  models.py  router.py  service.py
src/pelican/api/routes/media/: controller.py  errors.py  models.py  router.py  service.py
src/pelican/api/routes/ping/: controller.py  models.py  router.py  service.py
src/pelican/api/routes/playlists/: controller.py  errors.py  models.py  router.py  service.py
src/pelican/api/routes/sse/: controller.py  models.py  router.py  service.py
src/pelican/api/routes/test/: controller.py  models.py  router.py  service.py
src/pelican/config/: base.py  builder.py  models.py
src/pelican/models/events/: binding.py  bindings.py  enums.py  event.py  media.py  playlist.py  playlists.py  test.py  types.py
src/pelican/services/bindings/: errors.py  models.py  service.py
src/pelican/services/events/: models.py  service.py
src/pelican/services/graphite/: __init__.py  errors.py  migrator.py  service.py
src/pelican/services/media/: errors.py  models.py  service.py  utils.py
src/pelican/services/minium/: errors.py  models.py  service.py
src/pelican/services/ping/: models.py  service.py
src/pelican/services/playlists/: errors.py  models.py  service.py
src/pelican/services/test/: models.py  service.py
src/pelican/utils/: asyncify.py  m3u.py  mime.py  read.py  syncify.py
tests/integration/: conftest.py
