[tool.poetry]
name = "emitunes"
version = "0.4.0"
description = "Emission playlists 💽"
authors = ["radio-aktywne <it@radioaktywne.pl>"]

[tool.poetry.dependencies]
python = "^3.12"
# Pydantic is used to define data models
pydantic = "^2.8"
pydantic-settings = "^2.3"
# OmegaConf is used to load configuration
omegaconf = "^2.3"
# Typer and Rich are used to build CLIs
typer = "^0.12"
rich = "^13.7"
# Litestar and Uvicorn are used to build async APIs
litestar = "^2.10"
uvicorn = { version = "^0.30", extras = ["standard"] }
# For correct handling of timezones
tzdata = "*"
# Database access
prisma = "^0.13"
# MinIO client
minio = "^7.2"
# Fractional indexing
fractional-indexing = "^0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
# Asyncio support for pytest
pytest-asyncio = "^0.23"
# Running dependent services in containers
testcontainers = "^4.7"
# Async HTTP requests
httpx = "^0.27"

[tool.prisma]
# Store Prisma binaries in local directory
binary_cache_dir = "prisma/bin"

[tool.poetry.scripts]
# Register CLI
emitunes = "emitunes.__main__:cli"

# See: https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
