[tool.poetry]
package-mode = true
name = "pelican"
version = "0.7.0"
description = "Broadcast playlists 💽"
authors = ["radio-aktywne <it@radioaktywne.pl>"]

[tool.poetry.dependencies]
python = "^3.12"
# Pydantic is used to define data models
pydantic = "^2.10"
pydantic-settings = "^2.8"
# Typer and Rich are used to build CLIs
typer = "^0.15"
rich = "^13.9"
# Litestar and Uvicorn are used to build async APIs
litestar = "^2.14"
uvicorn = { version = "^0.34", extras = ["standard"] }
# For correct handling of timezones
tzdata = "*"
# Environment variables loader
python-dotenv = "^1.0"
# Database access
prisma = "^0.15"
# MinIO client
minio = "^7.2"
# Fractional indexing
fractional-indexing = "^0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
# Asyncio support for pytest
pytest-asyncio = "^0.25"
# Running dependent services in containers
testcontainers = "^4.9"
# Async HTTP requests
httpx = "^0.28"

[tool.prisma]
# Store Prisma binaries in local directory
binary_cache_dir = "prisma/bin"

[tool.poetry.scripts]
# Register CLI
pelican = "pelican.__main__:cli"

[tool.pytest.ini_options]
# Remove in the future: https://github.com/pytest-dev/pytest-asyncio/issues/924
asyncio_default_fixture_loop_scope = "function"

# See: https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
